--- a/src/button/style.css
+++ b/src/button/style.css
@@ -186,7 +186,7 @@ button.disabled_danger_btn{
 
 
 /**  警告 **/
-.warning_btn{
+button.warning_btn {
   font-family:PingFangSC-Regular;
   color:rgba(71,77,84,1);
   background:rgba(255,171,0,1);
