去掉副本两个字

--- a/src/icon/iconfont/iconfont.css
+++ b/src/icon/iconfont/iconfont.css
@@ -842,7 +842,7 @@
 .icon-error5:before {
   content: "\e9ea";
 }
-.icon-Determine的副本:before {
+.icon-Determine:before {
   content: "\e9eb";
 }
 .icon-Face-recognition:before {
