--- a/src/pop/style.css
+++ b/src/pop/style.css
@@ -18,7 +18,7 @@
 }
 
 :global(.u-modal.in .u-modal-dialog) {
-  position: relative;
+  position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
