--- a/src/progress/style.css
+++ b/src/progress/style.css
@@ -1,20 +1,10 @@
 /*新增的requestloading*/
-.process_loading_content {
-    position: absolute;
-    top: 0;
-    left: 0;;
-    margin-left: calc(30% + 72px);
-    opacity: 0;
+  .progress_wrap{
+    position: relative;
+    width: 338px;
+    height: 32px
   }
-  .process_loading_content :global(.iconfont){
-    position: absolute;
-    top:0;
-    right: 10px;
-    line-height: 32px;
-    color:#fff;
-    font-size: 20px;
-  }
-  .process_loading{
+  .progress_loading{
     width: 338px;
     height: 32px;
     background-color: rgba(223,226,227,1);
@@ -22,14 +12,13 @@
     position: relative;
     box-shadow: none;
   }
-  :global(.u-progress-bar){
-    background-color: #e14b46;
+  .progress_load_icon{
+    position: absolute;
+    top: 0;
     line-height: 32px;
-    font-size: 12px;
-  }
-  :global(.u-progress-label){
-    float: left;
-    padding: 0 20px;
+    color: #fff;
+    font-size: 20px;
+    right: 20px;
   }
   .opacityShow{
     opacity: 1!important;
