--- a/src/pop/style.css
+++ b/src/pop/style.css
@@ -22,6 +22,10 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);   /* IE 9 */
+  -webkit-transform: translate(-50%, -50%);    /* Safari and Chrome */
+  -o-transform: translate(-50%, -50%);       /* Opera */
+  -moz-transform: translate(-50%, -50%);     /* Firefox */
   margin: 0px;
   color: #474D54;
   min-width: 400px;
