--- a/src/enhancedPagination/style.css
+++ b/src/enhancedPagination/style.css
@@ -8,6 +8,11 @@
     -webkit-box-pack: center;
     justify-content: center;
 }
+.enhanced_pagination .u-pagination{
+    font-size: 14px;
+    margin: 5px;
+    float: left;
+}
 .data_select {
     outline: none;
     -webkit-appearance: none;
@@ -20,9 +25,13 @@
     text-align: center;
     font-size: 14px;
     margin: 0 6px;
+    float: left;
+    margin: 5px;
 }
 .page_jump {
     font-size: 14px;
+    float: left;
+    margin: 5px;
 }
 input.page_jump_value {
     outline: none;
