--- a/src/manageWidget/manageWidgetList/style.css
+++ b/src/manageWidget/manageWidgetList/style.css
@@ -107,7 +107,8 @@
 }
 .footer{
   height: 35px;
-  width: 176px;
+  /* width: 176px; */
+  width: 100%;
   padding:7px 8px;
   position: absolute;
   bottom: 0px;
