--- a/src/manageWidget/manageGroup/style.css
+++ b/src/manageWidget/manageGroup/style.css
@@ -97,7 +97,7 @@
   color:rgba(51,51,51,1);
   float: left;
 }
-.newGroupName.input{
+.newGroupName:global(.input){
   width:176px;
 	height:22px;
 }
