--- a/src/manageWidget/manageGroup/style.css
+++ b/src/manageWidget/manageGroup/style.css
@@ -203,6 +203,6 @@
 .widgetTitleInit>div:nth-child(2)>div{
   display: inline-table;
 }
-/* .check_group :global(.u-checkbox input[type=checkbox]){
-  top:15px;
-} */
+.check_group :global(.u-checkbox){
+  display:inline;
+}
