--- a/src/manageWidget/manageGroup/style.css
+++ b/src/manageWidget/manageGroup/style.css
@@ -31,7 +31,7 @@
 .addGroupBtn{
   /* display:flex; */
   /* border: 1px solid #D9D9D9; */
-  font-size:12px;
+  font-size:14px;
   color:rgba(71,77,84,1);
 }
 .addGroupBtn :global(.iconfont){
@@ -94,7 +94,7 @@
 	height:22px;
 	padding:0 9px;
 	font-size:12px;
-  color:rgba(51,51,51,1);
+  color:#111111;
   float: left;
 }
 .newGroupName:global(.input){
@@ -109,8 +109,8 @@
   border:1px solid #878B94;
 }
 .widgetTitle :global(.uf),.widgetTitle :global(.iconfont){
-	font-size:20px;
-	color:#4A515D;
+	font-size:22px;
+	color:#555555;
 	margin-right:23px;
 	font-weight: bold;
 }
