--- a/src/manageWidget/serviceItem/style.css
+++ b/src/manageWidget/serviceItem/style.css
@@ -1,120 +1,119 @@
 .serviceItem{
-    width:160px;
-    height:52px;
-    line-height: 38px;
-    float: left;
-    margin: 16px;
-    margin-right: 0px;
-    border: none;
-    border-radius: 5px;
-    padding: 5px;
-    position: relative;
-    background:rgba(244,245,247,0.5);
-    border-radius: 3px ;
-
-    font-family: "微软雅黑 Regular", 微软雅黑;
-    font-weight: 400;
-    font-style: normal;
-    font-size: 14px;
-    border: 1px solid rgba(78,89,104,0.19);
+  width:160px;
+  height:52px;
+  line-height: 38px;
+  float: left;
+  margin: 8px 24px 8px 0;
+  border: none;
+  border-radius: 5px;
+  padding: 5px;
+  position: relative;
+  background:rgba(243,243,243,1);
+  border-radius: 3px ;
+  font-size:14px;
+  font-family:MicrosoftYaHei;
+  color:rgba(85,85,85,1);
+  border: 1px solid rgba(243,243,243,1);
 }
 .serviceItemTitle{
-  width: 100%;    
-  border-bottom: 1px solid rgba(13,20,36,0.1);
-  display: -webkit-box;
-  display:flex;
+width: 100%;    
+border-bottom: 1px solid rgba(208,208,208,1);
+display: -webkit-box;
+display:flex;
+}
+.serviceItemTitle:not(:first-child){
+padding-top: 30px;
 }
 .serviceItemTitle .item_li_top{
-  flex: 1;
-  height: 40px;
-  line-height: 40px;
+flex: 1;
+height: 40px;
+line-height: 40px;
 }
 .serviceItemTitle .item_footer{
-  /* flex: 1; */
-  text-align: left;
-  /* width: 50px; */
-  position: relative;
-  right: 35px;
-  bottom: 0px;
-  /* border: 1px solid red; */
+/* flex: 1; */
+text-align: left;
+/* width: 50px; */
+position: relative;
+right: 35px;
+bottom: 0px;
+/* border: 1px solid red; */
 }
 
 .item_li_top{
-	height:100%;
-  display: -webkit-box;
-  display: flex;
+height:100%;
+display: -webkit-box;
+display: flex;
 }
 
 
 .item_footer{
-	height: 30px;
-  line-height: 24px;
-	text-align: right;
-  position: absolute;
-  right: 10px;
-  top: 5px;
-  /* color: rgba(117,127,140,1); */
+height: 30px;
+line-height: 40px;
+text-align: right;
+position: absolute;
+right: 10px;
+top: 0;
+/* color: rgba(117,127,140,1); */
 }
 
 .item_left {
-    background: #ccc;
-    width: 60px;
+  background: #ccc;
+  width: 60px;
 }
 .item_right{
-	flex: 1;
-	padding-left: 5px;
-	/* padding-top: 10px; */
-	box-sizing: border-box;
-
-  font-size:12px;
-  font-family:MicrosoftYaHei;
-  color:rgba(71,77,84,1);
-
+flex: 1;
+padding-left: 5px;
+/* padding-top: 10px; */
+box-sizing: border-box;
+font-size:14px;
+font-family:MicrosoftYaHei;
+color:rgba(17,17,17,1);
 }
 .item_footer_app{
-  right: 58px !important;
+right: 58px !important;
 }
 
 .item_footer span{
-  font-family: "微软雅黑 Regular", 微软雅黑;
-  font-weight: 400;
-  font-style: normal;
-  font-size: 12px;
-  color: rgb(153, 153, 153);
+font-size:14px;
+font-family:MicrosoftYaHei;
+color:rgba(191,191,191,1);
 }
 .item_footer i{
-  font-size: 25px;
+font-size: 19px;
+color: rgba(85,85,85,1);
 }
 .serviceItem .item_footer span,.serviceItem .item_footer i{
-  display: table-row;
+display: table-row;
 }
 .icon{
-  width:30px;
-  height: 30px;
+width:30px;
+height: 30px;
 }
 .item_li_top  .icon{
-  margin-top: 4px;
+margin-top: 4px;
 }
 .up_icon{
-  color: rgba(117,127,140,1);
-  width:14px;
-  height:6px;
-  font-size: 20px;
-  cursor:pointer;
-  /* margin-left: 45px; */
-  margin-right: 8px;
+color: rgba(136,136,136,1);
+width:14px;
+height:6px;
+font-size: 20px;
+cursor:pointer;
+margin-right: 15px;
+line-height: 30px;
+height: 40px;
+top: 0;
 }
 /* 首页编辑-添加服务 */
 :global(.ie9_pop) .serviceItemTitle{
-  display: table;
+display: table;
 }
 :global(.ie9_pop) .serviceItemTitle>.item_footer{
-  display: table-cell;
-  text-align: right;
+display: table-cell;
+text-align: right;
 }
 :global(.ie9_pop) .serviceItemTitle>i{
-  display: table-cell;
+display: table-cell;
 }
 :global(.ie9_pop) .item_li_top>img{
-  float:left;
+float:left;
 }
