--- a/src/manageWidget/manageGroup/style.css
+++ b/src/manageWidget/manageGroup/style.css
@@ -13,7 +13,7 @@
 /* .widgetTitle :global(.u-checkbox input[type=checkbox]){
   top:18px;
 } */
-.addBtn{
+.addBtn, .addGroupBtn{
 	display: -webkit-box;
   display: -ms-flexbox;
   display: -webkit-flex;
@@ -29,13 +29,8 @@
 }
 
 .addGroupBtn{
-  /* display:flex; */
-  /* border: 1px solid #D9D9D9; */
   font-size:14px;
   color:rgba(71,77,84,1);
-}
-.addGroupBtn :global(.iconfont){
-  padding-right: 10px;
 }
 /**
 .addGroupBtn{
