--- a/src/manageWidget/style.css
+++ b/src/manageWidget/style.css
@@ -61,7 +61,7 @@
   color: rgba(255,255,255,1);
 } */
 
-.addBtn{
+.addBtn, .addGroupBtn{
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -73,14 +73,11 @@
   align-items: center;
 }
 .addGroupBtn{
-  /* display:flex; */
   border: 1px solid #D9D9D9;
   font-size:14px;
   color:rgba(71,77,84,1);
 }
-.addGroupBtn :global(.iconfont){
-  padding-right: 10px;
-}
+
 .manager_save_pop>div{
   width: auto !important;
 }
