文件夹样式

--- a/src/manageWidget/manageWidgetList/style.css
+++ b/src/manageWidget/manageWidgetList/style.css
@@ -61,8 +61,8 @@
   color:#111111;
 }
 .file_title_right{
-  margin-top: 6px;
-  margin-left: 6px;
+  /* margin-top: 6px;
+  margin-left: 6px; */
   color:#fff;
 }
 .widget_node{
