--- a/src/icon/style.css
+++ b/src/icon/style.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?txv9ru');
-  src:  url('fonts/icomoon.eot?txv9ru#iefix') format('embedded-opentype'),
-    /* url('fonts/icomoon.woff2?txv9ru') format('woff2'), */
-    url('fonts/icomoon.ttf?txv9ru') format('truetype'),
-    url('fonts/icomoon.woff?txv9ru') format('woff'),
-    url('fonts/icomoon.svg?txv9ru#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?c5rixv');
+  src:  url('fonts/icomoon.eot?c5rixv#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.woff2?c5rixv') format('woff2'),
+    url('fonts/icomoon.ttf?c5rixv') format('truetype'),
+    url('fonts/icomoon.woff?c5rixv') format('woff'),
+    url('fonts/icomoon.svg?c5rixv#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -25,6 +25,9 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-Friends-space:before {
+  content: "\e985";
+}
 .icon-staff-solid:before {
   content: "\e9fd";
 }
