--- a/src/manageWidget/manageGroup/style.css
+++ b/src/manageWidget/manageGroup/style.css
@@ -205,12 +205,16 @@
   display:inline;
 }
 .noChildStyle{
-  margin-left: 10px;
-  color: #E14C46;
+  margin-left: 18px;
+  color: #FF8B00;
   line-height: 26px;
+  border-radius: 4px;
+  border: 1px solid rgba(255,171,0,0.5);
+  background: #ffffff;
+  padding: 7px 10px;
 }
 .noChildStyle :global(.iconfont){
-  color: #E14C46;
+  color: #FF8B00;
   margin-right: 0;
   position: relative;
   top: 3px;
