--- a/src/enterContent/style.css
+++ b/src/enterContent/style.css
@@ -55,6 +55,7 @@
 
 .enterForm :global(.u-form-item){
   width: 100%;
+  min-height: 64px;
 }
 
 .enterForm :global(.u-input-inner>input){
@@ -103,4 +104,35 @@
 
 .progressBar :global(.iconfont){
   color: #fff;
+}
+
+.country{
+  float: left;
+  margin-left: 40%;
+  position: relative;
+  left: -56px;
+} 
+.country :global(.u-label) {
+  width: auto;
+}
+.country :global(.u-select .u-select-selection){
+  border-radius: 3px 0 0 3px;
+}
+.code{
+  float: left;
+  position: relative;
+  left: -272px;
+  z-index: 2;
+  line-height: 44px;
+}
+.inputPhone{
+  float: left;
+  position: relative;
+  left: -52px;
+}
+.enterForm .inputPhone :global(.u-input-inner>input){
+  width: 226px !important;
+  border-radius: 0 3px 3px 0 !important;
+  border-left: none;
+  padding-left: 44px; 
 }
