--- a/src/searchInput/index.css
+++ b/src/searchInput/index.css
@@ -3,11 +3,12 @@
     margin: 5px 0;
     position: relative;
 }
-.serviceSearch{
+.searchPanel .serviceSearch{
     width: 100%;
     height:32px;
     transition: none;
     border-radius: 3px 0 0 3px;
+    padding-right: 104px;
 }
 .search_icon_con{
     width: 95px;
