--- a/src/moveToGroup/style.css
+++ b/src/moveToGroup/style.css
@@ -32,6 +32,9 @@
   box-shadow: none;
   -webkit-box-shadow: none;
 }
+.borderBox :global(.u-menu-inline .u-menu-item-active){
+  color: #e14c46;
+}
 .borderBox ul{
   padding:5px;
 }
@@ -110,4 +113,7 @@
 }
 .selectedli{
   background:rgba(238,238,238,1);
+}
+.btnHover{
+
 }
