--- a/src/moveToGroup/style.css
+++ b/src/moveToGroup/style.css
@@ -34,6 +34,7 @@
 }
 .borderBox :global(.u-menu-inline .u-menu-item-active){
   color: #e14c46;
+  background:#f3f3f3;
 }
 .borderBox ul{
   padding:5px;
@@ -112,5 +113,6 @@
   margin-right: 5px;
 }
 .selectedli{
-  background:rgba(238,238,238,1);
+  background:#f3f3f3;
+  color: #e14c46;
 }
