--- a/src/notification/index.css
+++ b/src/notification/index.css
@@ -1,5 +1,9 @@
 .notification_mess{
   width: auto;
+  height: auto;
+  top:102px !important;
+  margin-left: -264px;
+  left: 50%;
 }
 .notification_mess :global(.u-notification-notice){
   width: 528px;
