--- a/src/pop/style.css
+++ b/src/pop/style.css
@@ -35,6 +35,7 @@
   margin: 0px;
   color: #474D54;
   min-width: 370px;
+  width:370px;
 }
 :global(.u-modal.in .u-modal-dialog) >div{
   box-shadow: 0px 6px 8px 0px rgba(74,81,93,0.25);
@@ -49,10 +50,10 @@
 
 .pop_type.error :global(.u-modal-title > .iconfont) {
   margin-right: 8px;
-  color: #4C4C4C;
+  color: #BD3646;
   font-weight: 900;
   font-size: 32px;
-  position: absolute;
+  position: absolute; 
   left: 22px;
   top: 37px;
 }
@@ -60,6 +61,7 @@
 .pop_type.error :global(.u-modal-dialog .u-modal-title) {
   font-size: 19px;
     line-height: 24px;
+    color: #111111;
 }
 
 .pop_type.error :global(.u-modal-body) {
