--- a/src/icon/style.css
+++ b/src/icon/style.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?wxam0d');
-  src:  url('fonts/icomoon.eot?wxam0d#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.woff2?wxam0d') format('woff2'),
-    url('fonts/icomoon.ttf?wxam0d') format('truetype'),
-    url('fonts/icomoon.woff?wxam0d') format('woff'),
-    url('fonts/icomoon.svg?wxam0d#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?pmrzz3');
+  src:  url('fonts/icomoon.eot?pmrzz3#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.woff2?pmrzz3') format('woff2'),
+    url('fonts/icomoon.ttf?pmrzz3') format('truetype'),
+    url('fonts/icomoon.woff?pmrzz3') format('woff'),
+    url('fonts/icomoon.svg?pmrzz3#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -25,6 +25,14 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-Tree-plus-sign:before {
+  content: "\e986";
+  color: #555;
+}
+.icon-Tree-minus-sign:before {
+  content: "\e987";
+  color: #555;
+}
 .icon-Friends-space:before {
   content: "\e985";
 }
