--- a/src/icon/style.css
+++ b/src/icon/style.css
@@ -10,7 +10,7 @@
   font-style: normal;
 }
 
-[class^="icon-"], [class*=" icon-"] {
+.iconfont {
   /* use !important to prevent issues with browser extensions that change fonts */
   font-family: 'icomoon' !important;
   speak: none;
@@ -19,7 +19,6 @@
   font-variant: normal;
   text-transform: none;
   line-height: 1;
-
   /* Better Font Rendering =========== */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
