--- a/src/icon/style.css
+++ b/src/icon/style.css
@@ -24,6 +24,19 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+:global(.diworkiconfont){
+  font-family: 'icomoon' !important;
+  speak: none;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
 .icon-Tree-plus-sign:before {
   content: "\e986";
   color: #555;
