--- a/src/icon/style.css
+++ b/src/icon/style.css
@@ -11,7 +11,7 @@
 }
 
 .iconfont {
-  /* use !important to prevent issues with browser extensions that change fonts */
+  /* use !important to prevent issues with browser extensions that change fonts
   font-family: 'icomoon' !important;
   speak: none;
   font-style: normal;
@@ -19,9 +19,8 @@
   font-variant: normal;
   text-transform: none;
   line-height: 1;
-  /* Better Font Rendering =========== */
   -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  -moz-osx-font-smoothing: grayscale; */
 }
 
 :global(.diworkiconfont){
