--- a/src/moveToGroup/style.css
+++ b/src/moveToGroup/style.css
@@ -1,17 +1,16 @@
 .container{
 
 }
+
 .title{
   margin-top: 16px;
   height:16px;
-  font-size:12px;
+  font-size:14px;
   font-family:MicrosoftYaHei;
   color:rgba(102,102,102,1);
   line-height:16px;
 }
-.pd{
-  padding-top: 20px;
-}
+
 .borderBox{
   margin-top: 8px;
   height: 170px;
@@ -32,37 +31,32 @@
   box-shadow: none;
   -webkit-box-shadow: none;
 }
-.borderBox :global(.u-menu-inline .u-menu-item-active){
-  color: #e14c46;
-  background:#f3f3f3;
-}
 .borderBox ul{
   padding:5px;
 }
-.borderBox li{
-  width:100%;
-  font-family:MicrosoftYaHei;
-  color:rgba(74,81,93,1);
-}
-.borderBox li p{
-  padding-left: 30px;
-  line-height: 25px;
-  position: relative;
-  font-size:14px;
-}
-.borderBox li p:hover{
-  background:rgba(238,238,238,1);
-  color:#E14C46;
+.borderBox :global(.u-menu .u-menu-item-active){
+  background: #f3f3f3;
+  color: #E14C46;
 }
 
-.borderBox li div{
-  line-height: 25px;
-  padding-left: 38px;
-  font-size:12px;
+.u-menu-inline .u-menu-selected {
+  border: none;
+  color: #E14C46;
 }
-.borderBox li div:hover{
-  background:rgba(238,238,238,1);
-  font-weight: 600;
+.borderBox :global(.u-menu-inline > .u-menu-submenu-active){
+  background: #f3f3f3;
+  color: #E14C46 ;
+}
+.borderBox :global(.u-menu .u-menu-submenu-active > .u-menu-submenu-title){
+  background: #f3f3f3;
+  color: #E14C46;
+}
+.borderBox :global(.u-menu-submenu-selected){
+  background: none;
+}
+.borderBox :global(.u-menu-inline .u-menu-item-selected){
+  background: #e4e4e4;
+  color: #555555;
 }
 .borderBox input{
   display: block;
@@ -83,12 +77,13 @@
   outline: 0;
   transition: all ease .1s;
 }
+
 .footer{
   padding-top: 9px;
 }
 .footer :global(.u-button){
   height: 22px;
-  font-size:12px;
+  font-size:14px;
   min-width: 0;
   font-family:MicrosoftYaHei;
   line-height:21px;
@@ -109,10 +104,12 @@
 .footer :global(.u-button-danger){
   background:#E14C46;
 }
+
+.selectedli{
+  color: #E14C46 !important;
+}
+
 .saveBtn{
   margin-right: 5px;
 }
-.selectedli{
-  background:#f3f3f3;
-  color: #e14c46;
-}
+
