--- a/src/pop/style.css
+++ b/src/pop/style.css
@@ -69,11 +69,14 @@
 }
 
 .pop_type.error :global(.u-modal-body) {
-  font-size: 14px;
-  padding: 0px;
-  padding-left: 60px;
-  padding-bottom: 6px;
-  line-height: 26px;
+ font-size: 14px;
+ /* padding: 0px;
+ padding-left: 60px;
+ padding-bottom: 6px; */
+ padding:0 18px 6px 18px;
+ text-indent: 42px;
+ line-height: 26px;
+
 }
 
 .pop_type.error :global(.u-modal-header) {
