--- a/src/enterContent/style.css
+++ b/src/enterContent/style.css
@@ -19,6 +19,13 @@
   float: left;
 }
 
+.enterForm :global(.error){
+  float: left;
+  margin-left: 5px;
+  line-height: 32px;
+  color: #f22c1d;
+}
+
 .country{
   
 } 
