--- a/src/enterContent/style.css
+++ b/src/enterContent/style.css
@@ -14,6 +14,7 @@
 }
 .enterForm input {
   width: 338px;
+  height: 32px;
 }
 .upload{
   float: left;
@@ -110,7 +111,7 @@
 
 .enterForm :global(.u-form-item){
   width: 100%;
-  min-height: 64px;
+  min-height: 64px !important;
 }
 
 .enterForm :global(.u-input-inner>input){
