--- a/src/icon/style.css
+++ b/src/icon/style.css
@@ -12,7 +12,7 @@
 
 .iconfont {}
 
-.diworkiconfont{
+:global(.diworkiconfont){
   font-family: 'icomoon' !important;
   speak: none;
   font-style: normal;
